--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -11,18 +11,31 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "from pathlib import Path\n",
+        "\n",
+        "base_dir = Path('./data')\n",
+        "os.mkdir(base_dir / 'results')"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "9Vw19LChqSWf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "9Vw19LChqSWf",
         "outputId": "5cd2fb3b-9dc1-45a0-e56c-e01f6cf2bd20"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mounted at /content/drive\n"
           ]
@@ -108,6 +121,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "I_J93FT2vi2E"
+      },
       "source": [
         "##Структура датасета\n",
         "\n",
@@ -134,13 +150,15 @@
         "  \"labels\" : (3847200, 1) #5 496 секунд (700 гц)\n",
         "}\n",
         "```"
-      ],
-      "metadata": {
-        "id": "I_J93FT2vi2E"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "5GXOvT5sXoNx"
+      },
+      "outputs": [],
       "source": [
         "class Signal:\n",
         "  \"\"\"\n",
@@ -574,42 +592,40 @@
         "                          metrics.append(np.max(window) - np.min(window))\n",
         "                          names.append(f\"{key}_RANGE\")\n",
         "      return metrics\n"
-      ],
-      "metadata": {
-        "id": "5GXOvT5sXoNx"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "kwSHVVnYXaS6"
+      },
+      "outputs": [],
       "source": [
         "zip_path = '/content/drive/MyDrive/Thesis/WESAD.zip'\n",
         "extract_path = '/content/drive/MyDrive/Thesis/Datasets/multiclass/chest_acc_'\n",
         "log_file = '/content/drive/MyDrive/Thesis/Results/multiclass_acc_dataset_time.txt'\n",
         "main_path = '/content/drive/MyDrive/Thesis/WESAD'"
-      ],
-      "metadata": {
-        "id": "kwSHVVnYXaS6"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "noqmTYlG2hl5"
+      },
+      "outputs": [],
       "source": [
         "with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
         "  names = [name for name in zip_ref.namelist() if '.pkl' in name]\n",
         "names"
-      ],
-      "metadata": {
-        "id": "noqmTYlG2hl5"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "jwAObQ04MHiL"
+      },
       "source": [
         "Допустимые метрики\n",
         "```\n",
@@ -618,13 +634,15 @@
         "\"MAX\", \"MIN\", \"STD\", \"MEAN\", \"RANGE\"\n",
         "\"LF\", \"HF\", \"HFn\", \"LFHF\", \"MeanNN\", \"RMSSD\", \"SVI\"\n",
         "```"
-      ],
-      "metadata": {
-        "id": "jwAObQ04MHiL"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "OQjvOljZ3K6R"
+      },
+      "outputs": [],
       "source": [
         "signal_conf = {\n",
         "        \"chest\" : {\n",
@@ -642,40 +660,40 @@
         "            \"BVP\" : []\n",
         "        }\n",
         "    }"
-      ],
-      "metadata": {
-        "id": "OQjvOljZ3K6R"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "id": "lBgfcqq1eDQz"
+      },
+      "outputs": [],
       "source": [
         "subjects = [0] * len(names)\n",
         "\n",
         "for idx in range(len(subjects)):\n",
         "  print(f\"[{idx + 1}/{len(subjects)}] subject:\\n\")\n",
         "  subjects[idx] = WesadSubject(main_path, names[idx].split(\"/\")[1])"
-      ],
-      "metadata": {
-        "id": "lBgfcqq1eDQz",
-        "collapsed": true
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Создание датасета, где объекты являются статическим набором метрик"
-      ],
       "metadata": {
         "id": "W0F7P_vnay3y"
-      }
+      },
+      "source": [
+        "Создание датасета, где объекты являются статическим набором метрик"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "1b5sSLLsR9OU"
+      },
+      "outputs": [],
       "source": [
         "with open(log_file, 'w') as f:\n",
         "  f.write(\"Time Log - \" + datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\") + \"\\n\\n\")\n",
@@ -702,24 +720,24 @@
         "with open(log_file, \"a\") as f:\n",
         "  f.write(f\"Dataset without timesteps\\n\")\n",
         "  f.write(f\"Time: {time.time() - time_start} sec\\n\\n\")"
-      ],
-      "metadata": {
-        "id": "1b5sSLLsR9OU"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Создание датасета, где объекты являются временными рядами метрик"
-      ],
       "metadata": {
         "id": "JjW3DAtXbBMV"
-      }
+      },
+      "source": [
+        "Создание датасета, где объекты являются временными рядами метрик"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "zK-hHhTaaVsA"
+      },
+      "outputs": [],
       "source": [
         "for window in range(15, 46, 15):\n",
         "  for timestep_num in range(2, 9):\n",
@@ -747,12 +765,7 @@
         "    with open(log_file, \"a\") as f:\n",
         "      f.write(f\"Dataset with {timestep_num} timestpes and an internal window length of {window} seconds\\n\")\n",
         "      f.write(f\"Time: {time.time() - time_start} sec\\n\\n\")"
-      ],
-      "metadata": {
-        "id": "zK-hHhTaaVsA"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
   ],
   "metadata": {
@@ -760,11 +773,21 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "venv (3.11.9)",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.9"
     }
   },
   "nbformat": 4,
